update confusing "add 5 to a set" example

--- a/style.css
+++ b/style.css
@@ -124,6 +124,9 @@
   background: #c00;
   content: "";
 }
+.deck-container .slide .nowrap {
+  white-space: nowrap;
+}
 .deck-container .slide ::selection {
   background: #c00;
   color: #fff;
